--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -27,7 +27,7 @@ $mailClient = thunderbird
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-exec-once = waybar & swaync && hypridle && hyprpaper
+exec-once = waybar & swaync & hypridle & hyprpaper
 
 
 #############################
