Change file manager to Thunar

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -14,7 +14,7 @@ monitor=,preferred,auto,auto
 
 # Set programs that you use
 $terminal = kitty
-$fileManager = nautilus
+$fileManager = thunar
 $menu = wofi --show drun
 $browser = google-chrome-stable
 $mailClient = thunderbird
@@ -28,6 +28,7 @@ $mailClient = thunderbird
 # Or execute your favorite apps at launch like this:
 
 exec-once = waybar & swaync & hypridle & hyprpaper
+exec-once = thunar --daemon
 
 
 #############################
