--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -1,63 +1,114 @@
 {
-  "position": "top",
-  "modules-left": ["hyprland/workspaces"],
-  "modules-center": ["clock"],
-  "modules-right": ["tray", "bluetooth", "network", "pulseaudio", "battery", "custom/power"],
-
-  "clock": {
-    "format": "<span foreground='#f5c2e7'>   </span>{:%a %d %H:%M}",
-    "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>"
-  },
-
-  "battery": {
-    "states": {
-      "warning": 30,
-      "critical": 15
+    "layer": "top",
+    "position": "top",
+    "mod": "dock",
+    "exclusive": true,
+    "passthrough": false,
+    "gtk-layer-shell": true,
+    "height": 50,
+    "modules-left": [
+        "hyprland/workspaces"
+    ],
+    "modules-center": [
+        "clock"
+    ],
+    "modules-right": [
+        "network",
+        "bluetooth",
+        "pulseaudio",
+        "tray",
+        "battery",
+        "custom/power"
+    ],
+    "network": {
+        "format-wifi": "<span size='13000' foreground='#f5e0dc'>  </span>{essid}",
+        "format-ethernet": "<span size='13000' foreground='#f5e0dc'>  </span>",
+        "format-linked": "<span size='13000' foreground='#f5e0dc'> 󰈁 </span>{ifname} (No IP)",
+        "format-disconnected": "<span size='13000' foreground='#f5e0dc'>  </span>Disconnected",
+        "tooltip-format-wifi": "SSID: {essid}\nSignal Strength: {signalStrength}%\nIP: {ipaddr}",
+        "tooltip-format-ethernet": "Interface: {ifname}\nIP: {ipaddr}",
+        "tooltip-format-disconnected": "No connection",
+        "on-click": "networkmanager_dmenu"
+      },
+    "hyprland/workspaces": {
+        "disable-scroll": true,
+        "all-outputs": true,
+        "on-click": "activate",
+        "persistent_workspaces": {
+            "1": [],
+            "2": [],
+            "3": [],
+            "4": [],
+            "5": [],
+            "6": [],
+            "7": [],
+            "8": [],
+            "9": [],
+            "10": []
+        }
     },
-    "format": "<span size='13000' foreground='#a6e3a1'>{icon} </span> {capacity}%",
-    "format-warning": "<span size='13000' foreground='#B1E3AD'>{icon} </span> {capacity}%",
-    "format-critical": "<span size='13000' foreground='#E38C8F'>{icon} </span> {capacity}%",
-    "format-charging": "<span size='13000' foreground='#B1E3AD'> </span>{capacity}%",
-    "format-plugged": "<span size='13000' foreground='#B1E3AD'> </span>{capacity}%",
-    "format-alt": "<span size='13000' foreground='#B1E3AD'>{icon} </span> {time}",
-    "format-full": "<span size='13000' foreground='#B1E3AD'> </span>{capacity}%",
-    "format-icons": ["", "", "", "", ""],
-    "tooltip-format": "{time}"
-  },
-
-  "network": {
-    "format-wifi": "<span size='13000' foreground='#f5e0dc'>  </span>{essid}",
-    "format-ethernet": "<span size='13000' foreground='#f5e0dc'> 󰈀 </span>",
-    "format-linked": "<span size='13000' foreground='#f5e0dc'> 󰈁 </span>{ifname} (No IP)",
-    "format-disconnected": "<span size='13000' foreground='#f5e0dc'>  </span>Disconnected",
-    "tooltip-format-wifi": "SSID: {essid}\nSignal Strength: {signalStrength}%\nIP: {ipaddr}",
-    "tooltip-format-ethernet": "Interface: {ifname}\nIP: {ipaddr}",
-    "tooltip-format-disconnected": "No connection",
-    "on-click": "networkmanager_dmenu"
-  },
-
-  "pulseaudio": {
-    "format": "{icon}  {volume}%",
-    "format-muted": "",
-    "format-icons": {
-      "default": ["", "", " "]
+    "tray": {
+        "icon-size": 18,
+        "spacing": 10
     },
-    "on-click": "pavucontrol"
-  },
-
-  "bluetooth": {
-    "format-off": "<span size='13000' foreground='#585b70'> </span>",
-    "format-connected": "<span size='13000' foreground='#89b4fa'> </span>{device_alias}",
-    "tooltip-format": "Bluetooth: {status}\nDevice: {device_alias}\nMAC: {device_address}",
-    "on-click": "blueman-manager"
-  },
-  "tray": {
-          "spacing": 10,
-  },
-  "custom/power": {
-    "format": " ⏻ ",
-    "tooltip": "Power Menu",
-    "on-click": "~/.config/wofi/power.sh",
-    "interval": 0
-  }
+    "clock": {
+      "format": "<span foreground='#f5c2e7'>   </span>{:%a %d %H:%M}",
+      "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>"
+    },
+    "battery": {
+        "interval": 1,
+        "states": {
+            "good": 95,
+            "warning": 30,
+            "critical": 20
+        },
+        "format": "{icon} {capacity}%",
+        "format-charging": " {capacity}%",
+        "format-plugged": " {capacity}%",
+        "format-alt": "{time} {icon}",
+        "format-icons": [
+            "󰂎",
+            "󰁺",
+            "󰁻",
+            "󰁼",
+            "󰁽",
+            "󰁾",
+            "󰁿",
+            "󰂀",
+            "󰂁",
+            "󰂂",
+            "󰁹"
+        ]
+    },
+    "pulseaudio": {
+        "format": "{icon} {volume}%",
+        "tooltip": false,
+        "format-muted": "  ",
+        "on-click": "pavucontrol",
+        "format-icons": {
+            "headphone": "  ",
+            "hands-free": "  ",
+            "headset": "  ",
+            "phone": "  ",
+            "portable": "  ",
+            "car": "  ",
+            "default": [
+                "  ",
+                "   ",
+                "    "
+            ]
+        }
+    },
+    "bluetooth": {
+        "format-off": "<span size='13000' foreground='#585b70'> </span>",
+        "format-connected": "<span size='13000' foreground='#89b4fa'> </span>{device_alias}",
+        "tooltip-format": "Bluetooth: {status}\nDevice: {device_alias}\nMAC: {device_address}",
+        "on-click": "blueman-manager"
+      },
+    "custom/power": {
+        "format": " ⏻ ",
+        "tooltip": "Power Menu",
+        "on-click": "~/.config/wofi/power.sh",
+        "interval": 0
+      }
 }
