--- a/hyprpaper/.config/hypr/hyprpaper.conf
+++ b/hyprpaper/.config/hypr/hyprpaper.conf
@@ -1,3 +1,3 @@
-preload = /home/tristan/Pictures/Wallpapers/paper.png
-wallpaper = , /home/tristan/Pictures/Wallpapers/paper.png
+preload = /home/tristan/Pictures/Wallpapers/paper.jpg
+wallpaper = , /home/tristan/Pictures/Wallpapers/paper.jpg
 
