--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -2,8 +2,7 @@
 ### MONITORS ###
 ################
 
-monitor = DP-1,3440x1440@120,0x0,1
-
+monitor = , preferred, auto, 1
 # Optional: force full monitor spec
 ###################
 ### MY PROGRAMS ###
